welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:9: error: reassignment to val
				j=j+1
                                 ^Poucet:12: error: reassignment to val
				j=j+1
                                 ^